--- a/gooey/src/components/Title.css
+++ b/gooey/src/components/Title.css
@@ -99,6 +99,12 @@ h1, h2, h3, h4 {
     color: black;
 }
 
+.signup-button {
+    margin: 10% 0% 10% 0;
+    background-color: black;
+    color: whitesmoke;
+}
+
 .title-image {
     width: 100%;
     transform: rotate(0deg);
